# blooey

./: Cargo.toml
src/: actions.rs  app.rs  bluetooth.rs  component.rs  components.rs  events.rs  layouts.rs  main.rs  tui.rs
src/components/: alert.rs  select_list.rs  test_component.rs
