[package]
name = "blooey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bluer = { version = "0.16.1", features = ["full"] }
crossterm = "0.27.0"
ratatui = "0.24.0"
tokio = { version = "1.34.0", features = ["full"] }
